# xcalibur

./: .gitignore  CMakeLists.txt  EmptyGeneralTesting.sln  Makefile  README.md  Sample-Source.txt  SimpleGenerator.java  pyrotest.txt  source.txt
AutoTester/: AutoTester.vcxproj  Follows-Queries.txt  LewisQueries.txt  Modifies-Queries.txt  ModifiesX.txt  NextX.txt  NextXO.xml  Output2.xml  Parent-Queries.txt  PatternX.txt  PatternXO.xml  Queries.txt  Queries2.txt  Sampe-Source-Rick.txt  Sample-LargeSource.txt  Sample-Queries.txt  Sample-Source.txt  Sample-Source_Large.txt  Source.txt  Source2.txt  SourceX.txt  Source_modified.txt  Source_original.txt  SuperOut.xml  SuperQuery.txt  SuperTest.txt  TestQueries.txt  Trung-Queries.txt  Trung-Source.txt  khz.xml  out.xml  output.xml  output__old.xml  q_out.xml  simple_sample.txt
AutoTester/A/: Combined-Queries.txt  Combined-out.xml  Debug-Queries.txt  Debug-out.xml  Follows-out.xml  Merged-out.xml  MergedQueries.txt  Mergedout.xml  Modifies-Queries.txt  Modifies-out.xml  Parent-out.xml  Pattern-Queries.txt  Pattern-out.xml  Patterns-out.xml  Sample-Queries.txt  Sample-out.xml  Sample1-Queries.txt  Sample1-out.xml  Uses-Queries.txt  Uses-out.xml
AutoTester/B/: Trung-Queries.txt  Trung-Source.txt  Trung-out.xml  Uses-Queries.txt
AutoTester/C/: Lewis-out.xml  SourceLewis.txt  sample.txt
AutoTester/D/: Lewis-out.xml  LewisQueries.txt  Sample-Queries.txt  Sample-out.xml  SourceD.txt  SourceLewis.txt
AutoTester/Debug/: AutoTester.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
AutoTester/source/: TestWrapper.cpp  TestWrapper.h
Debug/: AutoTester.ilk  IntegrationTesting.ilk  SPA.lib  UnitTesting.ilk
IntegrationTesting/: IntegrationTesting.vcxproj  IntegrationTesting.vcxproj.filters
IntegrationTesting/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
IntegrationTesting/source/: IntegrationTest.cpp
SPA/: AST.cpp  AST.h  Calls.cpp  Calls.h  CallsExtractor.cpp  CallsExtractor.h  CfgNode.cpp  CfgNode.h  ConstantTable.cpp  ConstantTable.h  Contains.cpp  Contains.h  Follows.cpp  Follows.h  Lexeme.cpp  Lexeme.h  Lexer.cpp  Lexer.h  Modifies.cpp  Modifies.h  ModifiesExtractor.cpp  ModifiesExtractor.h  Operator.cpp  Operator.h  OptimizedNextStarSubquery.cpp  PKB.cpp  PKBController.cpp  PKBController.h  Parent.cpp  Parent.h  ParentExtractor.cpp  Parser.cpp  Parser.h  ProcTable.cpp  ProcTable.h  QTNode.cpp  QTNode.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryLexer.cpp  (+29 more)
SPA/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc100.idb
SPA/Frontend/: DesignExtractor.cpp  Lexeme.cpp  Lexeme.h  Lexer.cpp  Lexer.h  NewParser.cpp  NewParser.h  OldParser.cpp  Operator.cpp  Operator.h  Parser.cpp  Parser.h  TNode.cpp  TNode.h
SPA/PKB/: .Parent.h.swp  ANode.cpp  ANode.h  AST.cpp  AST.h  AffectsExtractor.cpp  AffectsExtractor.h  AggNode.cpp  AggNode.h  (+54 more)
UnitTesting/: TestAST.cpp  TestAST.h  TestContains.cpp  TestContains.h  TestFollowsSubquery.cpp  TestFollowsSubquery.h  TestModifies.cpp  TestModifies.h  TestNewQueryParser.cpp  TestNewQueryParser.h  TestOptimizedQE.cpp  TestOptimizedQE.h  TestOptimizedSubquerySolver.cpp  TestOptimizedSubquerySolver.h  TestParentSubquery.cpp  TestParentSubquery.h  TestParser.cpp  TestParser.h  TestProcTable.cpp  TestProcTable.h  TestQE.cpp  TestQE.h  TestQueryParser.cpp  TestQueryParser.h  TestSiblings.cpp  TestSiblings.h  TestSimpleSubquery.cpp  TestSubquery.cpp  TestSubquery.h  TestUses.cpp  TestUses.h  TestVarTable.cpp  TestVarTable.h  UnitTest.cpp  UnitTesting.vcxproj  UnitTesting.vcxproj.filters  testCalls.cpp  testCalls.h  testConstant.cpp  testConstant.h  (+13 more)
bonus/: Readme.txt  contains_sibling_queries.txt  contains_sibling_source.txt
lib/: AutoTesterLib.lib  AutoTester_debug.lib
source/: Parser.cpp  QTNode.cpp  QTNode.h  QueryTree.cpp
(+66 files in other folders)
